--- a/src/onegov/town6/theme/styles/org.scss
+++ b/src/onegov/town6/theme/styles/org.scss
@@ -1007,3 +1007,7 @@ ul.recipients {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
 }
+
+.icon-left-of-text {
+    width: 1.5rem;
+}
