Landsgemeinde: Logo and search placement
Place search in navigation and move logo to the right

TYPE: Feature
LINK: OGC-1288

--- a/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
+++ b/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
@@ -504,3 +504,38 @@ h1.main-title small {
 .tt-hint {
     opacity: 0;
 }
+
+.off-canvas .navigation-area {
+    flex-direction: column;
+
+    .searchbox {
+        padding: 0 3rem !important;
+
+        .typeahead {
+            top: 1.5rem;
+            position: relative;
+            left: calc(4rem - 100%);
+
+            ul {
+                width: 18rem;
+            }
+
+            * {
+                color: $oil !important;
+           }
+        }
+
+        #search {
+            background: transparent;
+
+            &::placeholder {
+                color: rgba(255, 255, 255, .7);
+            }
+
+            &:hover,
+            &:focus {
+                border-bottom: 1px solid $white;
+            }
+        }
+    }
+}
