--- a/src/onegov/town6/theme/styles/directories.scss
+++ b/src/onegov/town6/theme/styles/directories.scss
@@ -47,8 +47,8 @@
 
         li:hover {
             @include primary-color-background;
+            @include smooth-edges;
             a { color: $white; }
-            border-radius: .7rem;
         }
 
         a {
