--- a/src/onegov/town6/theme/styles/search.scss
+++ b/src/onegov/town6/theme/styles/search.scss
@@ -18,7 +18,7 @@
         margin-bottom: 0;
 
         input {
-            border-radius: .7rem;
+            @include smooth-edges;
         }
 
         .button {
@@ -34,7 +34,7 @@
 
     .typeahead ul {
         border: 1px solid $primary-color;
-        border-radius: .7rem;
+        @include smooth-edges;
         box-shadow: none;
         left: 0;
         padding: .7rem 0;
