--- a/src/onegov/town6/theme/styles/sliders.scss
+++ b/src/onegov/town6/theme/styles/sliders.scss
@@ -2,7 +2,7 @@
 
 .slider {
     &.no-images {
-        background-color: $tuatara;
+        background-color: $charcoal;
         color: $white;
         padding: 8rem;
     }
