--- a/src/onegov/town6/theme/styles/forms.scss
+++ b/src/onegov/town6/theme/styles/forms.scss
@@ -232,10 +232,10 @@ form {
 
     .file-preview-wrapper {
         &:not(:empty) {
+            @include smooth-edges;
             border: $input-border;
-            border-radius: .7rem;
-            padding: .5rem;
             margin-bottom: 1rem;
+            padding: .5rem;
         }
 
         .file-details {
@@ -345,7 +345,7 @@ input.has-field-help {
     margin-bottom: 1em;
 
     .thumbnail {
-        border-radius: .7rem;
+        @include smooth-edges;
         flex: 2;
         margin-right: 1rem;
         overflow: hidden;
@@ -356,7 +356,7 @@ input.has-field-help {
         }
 
         img {
-            border-radius: .7rem;
+            @include smooth-edges;
             max-height: 150px;
             object-fit: cover;
             vertical-align: top;
@@ -367,12 +367,12 @@ input.has-field-help {
 
 .directory-fields .field-display p.thumbnail {
     border: 0;
-    border-radius: .7rem;
+    @include smooth-edges;
     cursor: zoom-in;
 
     img {
         border: 0;
-        border-radius: .7rem;
+        @include smooth-edges;
         margin: 0;
         transition: filter .25s ease-in-out;
 
