--- a/src/onegov/town6/theme/styles/tickets.scss
+++ b/src/onegov/town6/theme/styles/tickets.scss
@@ -371,7 +371,7 @@ $ticket-filters-padding: .5rem;
         padding: 0;
 
         li {
-            border-radius: .7rem;
+            @include smooth-edges;
 
             &:hover {
                 @include primary-color-background;
