--- a/src/onegov/town6/theme/styles/panels.scss
+++ b/src/onegov/town6/theme/styles/panels.scss
@@ -284,3 +284,14 @@ $checklist-icon: "\f0ae";
 .date-filters input {
     margin-bottom: 0;
 }
+
+.occurrence-dates {
+    h3 {
+        hyphens: none;
+    }
+
+    .monthly-view {
+        border-top: 1px solid #e1e4e6;
+        padding-top: 1rem;
+    }
+}
