--- a/src/onegov/town6/theme/styles/sliders.scss
+++ b/src/onegov/town6/theme/styles/sliders.scss
@@ -7,3 +7,33 @@
         padding: 8rem;
     }
 }
+
+.orbit-controls button {
+    font-size: 1.5rem;
+}
+
+.orbit-bullet-wrapper {
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    margin: 0;
+    position: absolute;
+    right: 0;
+
+    .orbit-bullets {
+        padding: .5rem;
+        padding-top: .3rem;
+
+        button {
+            background-color: $white;
+            border: 2px solid $primary-color;
+
+            &.is-active,
+            &:hover {
+                background-color: $primary-color;
+                border: 2px solid $white;
+            }
+        }
+    }
+}
