--- a/src/onegov/town6/theme/styles/person.scss
+++ b/src/onegov/town6/theme/styles/person.scss
@@ -6,12 +6,11 @@ $person-phone-icon: '\f095';
 $person-email-icon: '\f0e0';
 
 .person-card {
-    margin: 0 1em 1em 0;
 
     .person-card-portrait {
         @include circle;
 
-        background: $topbar-bg-color;
+        background: $gainsboro;
         height: 9rem;
         overflow: hidden;
         position: relative;
@@ -28,7 +27,7 @@ $person-email-icon: '\f0e0';
 
         .fa-user {
             color: $white;
-            font-size: 10rem;
+            font-size: 8rem;
             left: 50%;
             position: absolute;
             top: 1rem;
@@ -111,9 +110,9 @@ $person-email-icon: '\f0e0';
 @include breakpoint(small only) {
     .person-card {
         .person-card-portrait {
-            height: calc(100vw - 12rem);
-            margin-bottom: 1.5rem;
-            width: calc(100vw - 12rem);
+            height: 8rem;
+            margin-bottom: 1rem;
+            width: 8rem;
 
             .fa-user {
                 font-size: calc(100vw - 6rem);
@@ -123,31 +122,43 @@ $person-email-icon: '\f0e0';
 }
 
 /*
-    Person card in lists
+    People list
+*/
+.people-list .card-section {
+    align-items: center;
+    display: flex;
+    padding: 1rem !important;
+}
+
+
+/*
+Person card in lists
 */
 
 .person-list-card {
+    align-items: center;
     display: flex;
+    justify-content: space-between;
+    width: 100%;
 
     .person-card-portrait {
         height: 5rem;
+        margin-right: 1em;
         position: relative;
         text-align: center;
         width: 5rem;
 
         .fa-user {
-            font-size: 5rem;
+            font-size: 4rem;
             left: 50%;
             position: absolute;
             transform: translate(-50%);
         }
     }
 
-    > a {
-        margin-right: 1em;
-    }
-
     ul {
+        flex-grow: 4;
+
         > li {
             font-size: .875rem;
             max-width: calc(100vw - 7.5rem);
@@ -156,13 +167,36 @@ $person-email-icon: '\f0e0';
         }
     }
 
+    > a:last-child {
+        color: $gainsboro;
+        padding: 2rem 1rem;
+        transition: all 200ms linear;
+
+        &:hover {
+            color: $primary-color;
+            padding-left: 2rem;
+            padding-right: 0rem;
+        }
+
+    }
+
+
     .person-card-title {
         font-size: 1rem;
         font-weight: bold;
     }
 
     .person-card-function {
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        display: -webkit-box;
         margin-bottom: 0;
+        overflow: hidden;
+
+        span {
+            cursor: help;
+        }
+
     }
 }
 
@@ -172,7 +206,7 @@ $person-email-icon: '\f0e0';
 
 .atoz-block {
     h2 {
-        border-bottom: 1px solid $gray-pastel;
+        padding-top: 1rem;
     }
 
     ul {
