--- a/src/onegov/town6/theme/styles/directories.scss
+++ b/src/onegov/town6/theme/styles/directories.scss
@@ -3,7 +3,6 @@
 */
 
 .directories-map {
-    height: $full-width-banner-height;
     margin-bottom: 1.4rem;
 }
 
@@ -48,8 +47,8 @@
 
         li:hover {
             @include primary-color-background;
+            @include smooth-edges;
             a { color: $white; }
-            border-radius: .7rem;
         }
 
         a {
