--- a/src/onegov/town6/theme/styles/panels.scss
+++ b/src/onegov/town6/theme/styles/panels.scss
@@ -129,12 +129,11 @@ $publications-icon: '\f1ea';
         }
 
         .callout {
-            border: none;
+            border: 0;
         }
 
-        @include more-link-after;
-
         a {
+            @include more-link-after;
             color: $primary-fg-color !important;
         }
 
@@ -231,7 +230,7 @@ $checklist-icon: "\f0ae";
 }
 
 .marker-map {
-    border-radius: .7rem;
+    @include smooth-edges;
 }
 
 .homepage .side-panel:first-child,
@@ -292,4 +291,15 @@ $checklist-icon: "\f0ae";
 
 .date-filters input {
     margin-bottom: 0;
+}
+
+.occurrence-dates {
+    h3 {
+        hyphens: none;
+    }
+
+    .monthly-view {
+        border-top: 1px solid #e1e4e6;
+        padding-top: 1rem;
+    }
 }
