--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -1778,6 +1778,7 @@ $editbar-bg-color: $topbar-link-bg-hover;
     .qr-code-link::before { @include icon($qr-code-icon); }
     .cancel::before { @include icon($disabled-icon); }
     .envelope::before { @include icon($envelope-icon); }
+    .internal-link::before { @include icon($internal-link-icon); }
 }
 
 .mark-as-paid::before { @include icon($mark-as-paid); }
