--- a/src/onegov/town6/theme/styles/header.scss
+++ b/src/onegov/town6/theme/styles/header.scss
@@ -534,7 +534,7 @@ $editbar-fg-color-active: $white;
     .upload::before { @include icon-bold($upload-icon); }
     .view-link::before { @include icon($view-link); }
     .ticket-pdf::before { @include icon($pdf-icon); }
-    .ticket-files::before { @include icon($ticket-files-icon); }
+    .ticket-files::before { @include icon-bold($ticket-files-icon); }
     .new-daily-item::before { @include icon-bold($new-daily-item-icon); }
     .new-resource-link::before { @include icon-bold($new-resource-link-icon); }
     .cancel::before { @include icon-bold($disabled-icon); }
