Move chat form to org so the many.js works, but hide them in org via css, add opening hours field

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -2295,10 +2295,13 @@ div#redactor-droparea {
     margin: 0 0 1rem;
 }
 
-
 .danger-zone {
     margin: 0 1em 1em;
     padding: 8px;
+}
+
+.chat-settings {
+    display: none;
 }
 
 /*
