--- a/src/onegov/town6/theme/styles/org.scss
+++ b/src/onegov/town6/theme/styles/org.scss
@@ -1022,3 +1022,17 @@ ul.recipients {
     right: 0;
     top: 0;
 }
+
+.videowrapper {
+	position: relative;
+	height: 0;
+	padding-bottom: 56.25%;
+}
+
+.videowrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
