--- a/src/onegov/town6/theme/styles/panels.scss
+++ b/src/onegov/town6/theme/styles/panels.scss
@@ -273,6 +273,8 @@ $checklist-icon: "\f0ae";
 }
 
 .people-panel {
+    margin-top: 2rem;
+
     li div:first-of-type {
         margin-top: .3rem;
     }
