--- a/src/onegov/town6/theme/styles/person.scss
+++ b/src/onegov/town6/theme/styles/person.scss
@@ -208,6 +208,8 @@ Person card in lists
         height: 4rem;
         margin-right: 0.6rem;
         margin-left: 0.5rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
         position: relative;
         text-align: center;
         width: 4rem;
