Town6: Add Chat Archive
TYPE: Feature

--- a/src/onegov/town6/theme/styles/org.scss
+++ b/src/onegov/town6/theme/styles/org.scss
@@ -961,6 +961,9 @@ ul.recipients {
     transform: rotate(180deg);
 }
 
+.icon-left-of-text {
+    width: 1.5rem;
+}
 .header-image {
     margin-bottom: .5rem;
     position: relative;
