Allow title to be on image

--- a/src/onegov/town6/theme/styles/widgets.scss
+++ b/src/onegov/town6/theme/styles/widgets.scss
@@ -58,7 +58,33 @@ article.content .side-panel {
 
         p {
             margin: 0;
-            padding-bottom: 2rem;
+            padding-bottom: 1rem;
+        }
+
+        .focus-title {
+            bottom: 0;
+            display: block;
+            left: 0;
+            margin-bottom: 0;
+            padding: 0;
+            position: absolute;
+            right: 0;
+
+            h5 {
+                background: rgba(0, 0, 0, .6);
+                border-radius: 0 0 .7rem .7rem;
+                color: #fff;
+                display: block;
+                margin-bottom: 0;
+                padding: 1.5rem;
+                padding-top: 1rem;
+                text-shadow: #000 0 0 10px;
+            }
+
+            .gradient {
+                background: linear-gradient(0deg, rgba(0, 0, 0, .6) 0%, rgba(0, 0, 0, 0) 100%);
+                padding-bottom: 2rem;
+            }
         }
     }
 
@@ -82,10 +108,14 @@ article.content .side-panel {
         }
     }
 
-    .focus-link > i.fa-external-link-alt {
-        margin-left: 1.5rem;
-        margin-top: -4.2rem;
-        position: absolute;
+    .focus-link {
+        .only-title.card {
+            height: auto !important;
+        }
+
+        &> i.fa-external-link-alt {
+            display: none;
+        }
     }
 }
 
