--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -6759,3 +6759,17 @@ a#results {
 .event-settings {
     display: none;
 }
+
+.videowrapper {
+    position: relative;
+    height: 0;
+    padding-bottom: 45%;
+}
+
+.videowrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
