Increase portrait size, make people sortable, fix css for arrow

--- a/src/onegov/town6/theme/styles/org.scss
+++ b/src/onegov/town6/theme/styles/org.scss
@@ -628,6 +628,11 @@ $pageref-color-hover: $iron;
 
             .list-title {
                 @include more-link-after;
+
+                &::after {
+                    position: absolute;
+                    right: 0;
+                }
             }
 
             .list-link {
