--- a/src/onegov/town6/theme/styles/person.scss
+++ b/src/onegov/town6/theme/styles/person.scss
@@ -140,10 +140,11 @@ Person card in lists
     display: flex;
     justify-content: flex-start;
     width: 100%;
+    border-top: 1px solid #f5f5f5;
 
     .person-card-portrait {
         height: 5rem;
-        margin: 0.25rem 1.4rem 0.2rem 0.5rem;
+        margin: 0.7rem 1.4rem 0.2rem 0.5rem;
         position: relative;
         text-align: center;
         width: 5rem;
