Fix merged problem

--- a/src/onegov/town6/theme/styles/custom_mixins.scss
+++ b/src/onegov/town6/theme/styles/custom_mixins.scss
@@ -81,6 +81,9 @@
 $more-link-icon: "\f054";
 
 @mixin more-link-after {
+    display: block;
+    position: relative;
+
     &::after {
         @include icon-bold($more-link-icon);
         float: right;
