Org: Separate documents and people in sidebar (style)

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -1427,7 +1427,7 @@ ul.panel-links {
 
 .side-panel {
     border: 1px solid $gray;
-    padding-bottom: 2rem;
+    margin-bottom: 1rem;
 
     h2,
     h3 {
