Add validator, translations and adjust design for org

--- a/src/onegov/town6/theme/styles/org.scss
+++ b/src/onegov/town6/theme/styles/org.scss
@@ -654,6 +654,13 @@ $pageref-color-hover: $iron;
     }
 }
 
+.side-panel .more-list {
+    li .list-title {
+        display: inline;
+        position: inherit;
+    }
+}
+
 .read-more-link {
     display: block;
     width: 100%;
