Org: Improve styling of alerts and errors. TYPE: Bugfix LINK: OGC-1517

--- a/src/onegov/town6/theme/styles/alert.scss
+++ b/src/onegov/town6/theme/styles/alert.scss
@@ -6,6 +6,10 @@ $info-icon: '\f05a';
 $success-icon: '\f058';
 $warning-icon: '\f071';
 
+#alert-boxes {
+    margin-top: 1rem;
+}
+
 .homepage-warning {
     background-color: $warning-color;
     display: flex;
