--- a/src/onegov/pas/theme/styles/pas.scss
+++ b/src/onegov/pas/theme/styles/pas.scss
@@ -1,4 +1,5 @@
 .globals {
+    .commissions::before { @include icon-bold('\f500'); }
     .legislative-periods::before { @include icon('\f073'); }
     .parliamentarians::before { @include icon-bold('\f508'); }
     .parliamentary-groups::before { @include icon('\f2b5'); }
