Remove Gap for alert boxes

--- a/src/onegov/town6/theme/styles/alert.scss
+++ b/src/onegov/town6/theme/styles/alert.scss
@@ -7,7 +7,13 @@ $success-icon: '\f058';
 $warning-icon: '\f071';
 
 #alert-boxes {
-    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+
+    .alert-box {
+        margin-top: 1rem;
+        position: absolute;
+    }
 }
 
 .homepage-warning {
