Town6: Remove gap above homepage video
TYPE: Bugfix
LINK: OGC-1522

--- a/src/onegov/town6/theme/styles/alert.scss
+++ b/src/onegov/town6/theme/styles/alert.scss
@@ -7,7 +7,13 @@ $success-icon: '\f058';
 $warning-icon: '\f071';
 
 #alert-boxes {
-    margin-top: 1rem;
+    .alert-box {
+        margin-top: 1rem;
+    }
+
+    &:last-child {
+        margin-bottom: 1rem;
+    }
 }
 
 .homepage-warning {
