Swissvotes: Add campaign links. TYPE: Feature LINK: SWI-45

--- a/src/onegov/swissvotes/theme/styles/swissvotes.scss
+++ b/src/onegov/swissvotes/theme/styles/swissvotes.scss
@@ -212,7 +212,8 @@ h2 small {
         }
     }
 
-    dl.recommendation:not(:last-child) {
+    dl.recommendation:not(:last-child),
+    dl.campaign-links:not(:last-child) {
         margin-bottom: 1em;
     }
 
