Add option for displaying as card and height

--- a/src/onegov/town6/theme/styles/org.scss
+++ b/src/onegov/town6/theme/styles/org.scss
@@ -247,6 +247,13 @@ footer {
     }
 }
 
+.iframe-panel {
+    border: 2px solid rgba(0, 0, 0, .04);
+    border-radius: .7rem;
+    box-shadow: 0 0 17px 0 rgba(0, 0, 0, .07);
+    padding: 1rem;
+}
+
 /*
     blank (uncolored) labels
 */
