--- a/src/onegov/swissvotes/theme/styles/swissvotes.scss
+++ b/src/onegov/swissvotes/theme/styles/swissvotes.scss
@@ -213,7 +213,8 @@ h2 small {
     }
 
     dl.recommendation:not(:last-child),
-    dl.campaign-links:not(:last-child) {
+    dl.campaign-links:not(:last-child),
+    div.campaign-finances:not(:last-child) {
         margin-bottom: 1em;
     }
 
